Melhorando definição de Plataformas